Docs: Update run instructions for Windows